--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Roboto", sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #ffffff;
+}
+.tag {
+  display: inline-block;
+  background: #e0e0e0;
+  color: rgba(0, 0, 0, 0.87);
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-right: 10px !important;
+  margin-bottom: 10px !important;
+  margin-top: 0 !important;
+  margin-left: 0 !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.custom-vertical-timeline-element {
+  padding: 0;
+}
+
+.custom-vertical-timeline:before {
+  background: black !important;
+}
+.vertical-timeline-element-date {
+  color: rgba(0, 0, 0, 0.87);
 }
