Explanation of votes in help dialog

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,12 @@ body {
 .vertical-timeline-element-content h2 {
   font-size: inherit !important;
 }
+
+.disclaimer_icon {
+  float: left;
+  margin-right: 10px;
+}
+
+.disclaimer_content {
+  display: content;
+}
